--- a/ProjetGL/Pages/Shared/_Layout.cshtml
+++ b/ProjetGL/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjetGL.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
     <header>
@@ -31,7 +32,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-2">
             @RenderBody()
         </main>
     </div>
