--- a/ProjetGL/Pages/Authentication.cshtml
+++ b/ProjetGL/Pages/Authentication.cshtml
@@ -27,7 +27,7 @@
     </div>
 
     <div>
-        Vous n'avez pas de compte? <a class="btn btn-link" asp-page="/Register">S'inscrire</a> <!--a s'exucte sous la forme de get-->
+        Vous n'avez pas de compte? <a class="btn btn-link" asp-page="/Inscription">S'inscrire</a> <!--a s'exucte sous la forme de get-->
     </div>
 
 </form>
