--- a/ProjetGL/Pages/Roles/ChefDepartement.cshtml
+++ b/ProjetGL/Pages/Roles/ChefDepartement.cshtml
@@ -18,6 +18,9 @@
                 <li class="nav-item mb-2">
                     <a href="/Admin" class="nav-link text-light">Fonctionnalite3</a>
                 </li>
+                <li class="nav-item mb-2">
+                    <a href="/Authentication" class="nav-link text-light">Se déconnecter</a>
+                </li>
             </ul>
         </nav>
     </div>
