--- a/ProjetGL/Pages/Roles/Responsable.cshtml
+++ b/ProjetGL/Pages/Roles/Responsable.cshtml
@@ -5,24 +5,29 @@
 
 <h1 class="text-primary">Responsable</h1>
 
-<div class=" d-flex">
+<div class="d-flex">
+    <!-- Sidebar -->
     <div class="col-2 offset-0">
         <nav class="bg-primary text-light sidebar vh-100 p-3">
             <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                    <a href="/Admin" class="nav-link text-light">Fonctionnalite1</a>
+                    <a href="#" class="nav-link text-light" onclick="loadContent('/Admin')">Fonctionnalite1</a>
                 </li>
                 <li class="nav-item mb-2">
-                    <a href="/Admin" class="nav-link text-light">Fonctionnalite2</a>
+                    <a href="#" class="nav-link text-light" onclick="loadContent('/Admin')">Fonctionnalite2</a>
                 </li>
                 <li class="nav-item mb-2">
-                    <a href="/Admin" class="nav-link text-light">Fonctionnalite3</a>
+                    <a href="#" class="nav-link text-light" onclick="loadContent('/Admin')">Fonctionnalite3</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="/Authentication" class="nav-link text-light">Se déconnecter</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a href="/CreationCompte" class="nav-link text-light">Creation du compte</a>
                 </li>
             </ul>
         </nav>
     </div>
-    <div class="col-4 offset-1">
-        <form method="post">
-        </form>
-    </div>
-</div> 
+
+</div>
+
