--- a/Projet/Views/Shared/_Layout.cshtml
+++ b/Projet/Views/Shared/_Layout.cshtml
@@ -25,6 +25,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (TempData["utilisateurId"] != null)
+                        {
+                            <li class="nav-item">
+                                <form asp-controller="Utilisateur" asp-action="Signout" method="post" class="d-inline">
+                                    <button type="submit" class="nav-link btn btn-link text-dark border-0 p-0">Signout</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Utilisateur" asp-action="Signin">Signin</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
